Fix navbar formatting issues on mobile

--- a/bars/nav.css
+++ b/bars/nav.css
@@ -1,16 +1,22 @@
 #firstStep,
-        #secondStep,
-        #thirdStep {
-            background-color: transparent;
-            border: none;
-            outline: none;
-            padding: 0px;
-        }
+#secondStep,
+#thirdStep,
+#notAStep {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 0px;
+}
 
-        #thirdStep {
-            margin-right: 1rem;
-        }
+#thirdStep {
+    margin-right: 1rem;
+}
 
-        .navbar-brand {
-            margin-right: 0px;
-        }
+#chessMindLogo {
+    display: flex;
+    flex-direction: row;
+}
+
+.navbar-brand {
+    margin-right: 0px;
+}
